--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "express-validator": "^2.19.1",
     "fbgraph": "^1.1.0",
     "github-api": "^0.11.2",
+    "gm": "^1.21.1",
     "instagram-node": "^0.5.8",
     "jade": "^1.11.0",
     "lastfm": "^0.9.2",
@@ -42,6 +43,7 @@
     "node-linkedin": "^0.5.3",
     "node-sass-middleware": "^0.9.7",
     "nodemailer": "^2.1.0",
+    "opencalais-client": "^0.1.3",
     "passport": "0.3.2",
     "passport-facebook": "^2.1.0",
     "passport-github": "^1.1.0",
@@ -53,6 +55,7 @@
     "passport-openid": "^0.4.0",
     "passport-twitter": "^1.0.4",
     "paypal-rest-sdk": "^1.6.8",
+    "promise": "^7.1.1",
     "request": "^2.69.0",
     "serve-favicon": "^2.3.0",
     "stripe": "^4.4.0",
@@ -60,6 +63,7 @@
     "twilio": "^3.3.0-edge",
     "twit": "^2.2.2",
     "validator": "^4.8.0",
+    "when": "^3.7.7",
     "yui": "^3.18.1"
   },
   "devDependencies": {
