--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "express-flash": "^0.0.2",
     "express-session": "^1.13.0",
     "express-validator": "^2.19.1",
+    "faced": "1.x",
     "fbgraph": "^1.1.0",
     "github-api": "^0.11.2",
     "gm": "^1.21.1",
