--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "fbgraph": "^1.1.0",
     "github-api": "^0.11.2",
     "gm": "^1.21.1",
+    "hulkify": "0.0.5",
     "instagram-node": "^0.5.8",
     "jade": "^1.11.0",
     "lastfm": "^0.9.2",
@@ -39,6 +40,7 @@
     "mongoose": "^4.4.3",
     "morgan": "^1.6.1",
     "multer": "^1.1.0",
+    "nlp_compromise": "^3.0.4",
     "node-foursquare": "^0.3.0",
     "node-linkedin": "^0.5.3",
     "node-sass-middleware": "^0.9.7",
