--- a/package.json
+++ b/package.json
@@ -29,7 +29,6 @@
     "fbgraph": "^1.1.0",
     "github-api": "^0.11.2",
     "gm": "^1.21.1",
-    "hulkify": "0.0.5",
     "instagram-node": "^0.5.8",
     "jade": "^1.11.0",
     "lastfm": "^0.9.2",
@@ -57,6 +56,7 @@
     "passport-openid": "^0.4.0",
     "passport-twitter": "^1.0.4",
     "paypal-rest-sdk": "^1.6.8",
+    "pos": "^0.3.0",
     "promise": "^7.1.1",
     "request": "^2.69.0",
     "serve-favicon": "^2.3.0",
